--- a/site/src/App.css
+++ b/site/src/App.css
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  padding: 0 7%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    justify-content: space-between;
+    /*border: 3px solid red;*/
+    padding: 1%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav img{
+  width: 10vw;
+
+}
+
+.img_logo{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.lien {
+  padding: 0;
+  display: flex;
+
+}
+
+.lien a{
+  margin: 0.4vw;
+  font-size: 1.4vw;
+  text-decoration: none;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  color:  rgb(0, 255, 170);
+
+  border-bottom: 6.2px solid rgb(0, 255, 170);
+  border-right: 1.2px solid rgb(0, 255, 170);
+  border-left: 1.2px solid rgb(0, 255, 170);;
+  padding: 1vh 4vw;
+  border-radius: 20px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+
+
+}
+.lien .active{
+  text-decoration: underline;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+/***********************************************/
+
+.img_mid img{
+  width: 100%;
+  border-radius: 50px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img_text 
+{
+  position: relative;
+}
+
+.img_text p
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: rgb(0, 255, 170);
+  font-size: 3vw;
+
+}
+
+/***************Mid******************************************/
+
+.mid{
+  margin: 4vh 0;
+  background-color: #333;
+  border-radius:  70px 70px 0 0 ;
+
+}
+
+.mid p{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 5vh 7vw;
+  color: rgb(0, 255, 170);
+  font-size: 3vh;
+  
+}
+
+
+.mid .mid_name{
+  font-size: 6vh;
+}
+
+.mid .text_l{
+  font-size: 4vh;
+  font-weight: bold;
+}
+
+
+
+/**************footer*********************************/
+
+.footer_img_logo img{
+  width: 7vw;
+}
+
+.footer{
+
+}
+
+footer{
+
+  justify-content: center;
+  align-items: center;
+
+
+  /*margin: 25vh 0 0 0;*/
+  padding: 20px 0;
+  /*position: absolute;*/
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
 }
