--- a/site/src/App.css
+++ b/site/src/App.css
@@ -3,9 +3,9 @@
   padding: 0;
 }
 
-body{
+/*body{
   padding: 0 7%;
-}
+}*/
 
 nav{
     display: flex;
@@ -14,6 +14,13 @@ nav{
     justify-content: space-between;
     /*border: 3px solid red;*/
     padding: 1%;
+    margin: 0;
+  }
+  
+  header{
+    margin-bottom: 4%;
+  box-shadow: gray 0px 27px 9px -26px;
+
 }
 
 nav img{
@@ -21,14 +28,271 @@ nav img{
 
 }
 
-.img_logo{
+.num_tel{
   display: flex;
 }
+.bt_num{
+  text-decoration: none;
+  border-radius: 3rem;
+  color:aqua;
+  font-size: 17px;
+  padding: 0 1rem;
+  font-weight: bolder;
+  font-family:'Courier New', Courier, monospace;
+
+}
+
+.svg_tel{
+ height: 21px;
+}
+
+
+@keyframes spin {
+  0%{
+      /*transform: scale(1);*/
+      transform: rotate(0deg);
+  }
+  25% {
+    /*transform: scale(1.3);*/
+    transform: rotate(-360deg);
+  }
+  35% {
+    /*transform: scale(1.3);*/
+    transform: rotate(38deg);
+  }
+
+  50%{
+    /*transform: scale(1);*/
+    transform: rotate(700deg);
+  }
+  75% {
+    /*transform: scale(1.3);*/
+    transform: rotate(-180deg);
+  }
+  100%{
+    /*transform: scale(1);*/
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin2
+{ 
+  0%{
+    transform: rotate(0deg);
+  }
+  30%
+  {
+    transform: rotate(810deg);
+  }
+  40%
+  {
+    transform: rotate(700deg);
+  }
+  50%
+  {
+    transform: rotate(740deg);
+  }
+  60%
+  {
+    transform: rotate(710deg);
+  }
+  70%
+  {
+    transform: rotate(730deg);
+  }
+  80%
+  {
+    transform: rotate(713deg);
+  }
+  90%
+  {
+    transform: rotate(723deg);
+  }
+
+  100%
+  {
+    transform: rotate(720deg);
+  }
+}
+
+@keyframes spin3
+{ 
+  0%{
+    transform: rotate(0deg);
+  }
+  30%
+  {
+    transform: rotate(810deg);
+  }
+  40%
+  {
+    transform: rotate(700deg);
+  }
+  50%
+  {
+    transform: rotate(740deg);
+  }
+  60%
+  {
+    transform: rotate(710deg);
+  }
+  70%
+  {
+    transform: rotate(730deg);
+  }
+  80%
+  {
+    transform: rotate(713deg);
+  }
+  90%
+  {
+    transform: rotate(723deg);
+  }
+
+  100%
+  {
+    transform: rotate(720deg);
+  }
+}
+
+
+
+.img_logo:hover{
+  animation: spin2 2.30s;
+}
+
+.img_logo{
+  display: flex;
+  animation: spin 35s infinite ;
+}
+
+.container{
+  transition: background-color 1s ease;
+}
+
+.white-bg.container {
+  background-color: #fff;
+  transition: background-color 2s ease;
+}
+
+.black-bg.container{
+  background-color: #333;
+  transition: background-color 2s ease;
+}
+
+.container{
+  padding: 0 7%;
+  
+}
+
+/* Cibler correctement l'image avec la classe img_dev_nav dans le parent .white-bg */
+
+.black-bg .img_dev_nav {
+  animation: spin2 6s forwards;
+  
+}
+
+.white-bg .img_dev_nav {
+  animation: spin3 6s forwards;
+  
+}
+
+.img_logo_dev:hover {
+ animation: highlow 500ms infinite;
+  cursor: pointer;
+}
+.img_logo_dev:hover {
+  animation: highlow 500ms infinite;
+   cursor: pointer;
+ }
 
 .lien {
   padding: 0;
   display: flex;
+  margin-top: 4.5%;
 
+}
+
+.lien a {
+ /*box-shadow: gray 0px 32px 26px -25px;*/
+  /*box-shadow: rgb(85 151 129) 1px 13px 9px -12px;  */
+  box-shadow: rgb(85 151 129) 1px 13px 18px -10px;
+
+}
+
+
+ .lien .container_a:hover {
+  animation: vibration 3s;
+ }
+
+@keyframes highlow {
+
+  0%{
+      transform: scale(1)
+  }
+
+  50%{
+    transform: scale(1.05)
+  }
+
+  100%{
+    transform: scale(1)
+  }
+}
+
+
+@keyframes vibration {
+
+  0%{
+    transform: translateX(0px);
+  }
+  30%
+  {
+    transform: translateX(5px);
+  }
+  40%
+  {
+    transform: translateX(-5px);
+  }
+  50%
+  {
+    transform: translateX(5px);
+  }
+  60%
+  {
+    transform: translateX(-5px);
+  }
+  70%
+  {
+    transform: translateX(5px);
+  }
+  80%
+  {
+    transform: translateX(-5px);
+  }
+  90%
+  {
+    transform: translateX(5px);
+  }
+
+  100%
+  {
+    transform: rotate(0deg);
+  }
+}
+
+.lienAccueil.active{
+  animation: highlow 0.9s ease-in infinite, vibration 0.8s;
+  box-shadow: rgb(85 151 129) 1px 13px 18px -7px;
+}
+
+.lienContacte.active{
+  animation: highlow 0.9s ease-in infinite, vibration 0.8s;
+  box-shadow: rgb(85 151 129) 1px 13px 18px -7px;
+}
+
+.lienProjet.active{
+  animation: highlow 0.9s ease-in infinite, vibration 0.8s;
+  box-shadow: rgb(85 151 129) 1px 13px 18px -7px;
 }
 
 .lien a{
@@ -41,7 +305,7 @@ nav img{
   border-bottom: 6.2px solid rgb(0, 255, 170);
   border-right: 1.2px solid rgb(0, 255, 170);
   border-left: 1.2px solid rgb(0, 255, 170);;
-  padding: 1vh 4vw;
+  padding: 1vh 6vw;
   border-radius: 20px;
   display: flex;
   justify-content: center;
@@ -57,6 +321,7 @@ nav img{
 
 /***********************************************/
 
+
 .img_mid img{
   width: 100%;
   border-radius: 50px;
@@ -68,6 +333,10 @@ nav img{
   position: relative;
 }
 
+.img_text img{
+  height: 49vh;
+}
+
 .img_text p
 {
   position: absolute;
@@ -76,7 +345,7 @@ nav img{
   transform: translate(-50%, -50%);
   z-index: 1;
   color: rgb(0, 255, 170);
-  font-size: 3vw;
+  font-size: 6vh;
 
 }
 
@@ -115,6 +384,15 @@ nav img{
   width: 7vw;
 }
 
+.img_footer{
+  animation: spin 35s infinite ;
+}
+
+.footer_img_logo img:hover{
+  animation: spin2 2.30s;
+}
+
+
 .footer{
 
 }
@@ -134,4 +412,5 @@ footer{
   background-color: #333;
   color: #fff;
   text-align: center;
+  box-shadow: gray 0px -27px 9px -26px;
 }
