--- a/site/src/App.css
+++ b/site/src/App.css
@@ -39,21 +39,71 @@ nav img{
   padding: 0 1rem;
   font-weight: bolder;
   font-family:'Courier New', Courier, monospace;
+  transition: transform 0.5s ease;
 
+}
+.bt_num:hover{
+    transform:scale(1.2)
 }
 
 .svg_tel{
  height: 21px;
 }
 
-@media (max-width:500px)
+/****************Warning********************************/
+.warning_togle{
+  padding-bottom: 13px;
+}
+
+
+.warning_togle h3{
+  color:red;
+  padding: 13px;
+  
+}
+
+
+.warning_togle span{
+  cursor: pointer;
+  background-color: red;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1px 7px;
+  border-radius: 50%;
+  color:white;
+  border: 4px solid #fff;
+  font-size: 20px;
+  margin: -12px -15px 0px 0px;
+  transition: transform 0.3s ease;
+}
+.warning_togle span:hover{
+  transform: scale(1.2)
+}
+
+.warning_togle_hide{
+  display: none;
+}
+
+.warning_mid{
+  display: flex;
+  border: 2px solid red;
+  margin: 1vh 7vw;
+  border-radius: 20px;
+
+}
+
+
+
+@media (max-width:600px)
 {
   header{
     position: relative;
   }
   #lien_id{
     position: absolute;
-    margin-top: 160px;
+    margin-top: 45%;
   }
   .container_a{
     width: 27vw;
@@ -62,7 +112,7 @@ nav img{
     font-size: 17px;
   }
   .num_tel{
-    margin-top: 75px;
+    margin-top: 19%;
   }
   nav img{
     width: 24vw;
@@ -248,7 +298,7 @@ nav img{
 
 
  .lien .container_a:hover {
-  animation: vibration 3s;
+  animation: vibration 1.8s;
  }
 
 @keyframes highlow {
@@ -308,17 +358,17 @@ nav img{
 }
 
 .lienAccueil.active{
-  animation: highlow 0.9s ease-in infinite, vibration 0.8s;
+  animation: highlow 0.9s ease-in infinite, vibration 0.75s;
   box-shadow: rgb(85 151 129) 1px 13px 18px -7px;
 }
 
 .lienContacte.active{
-  animation: highlow 0.9s ease-in infinite, vibration 0.8s;
+  animation: highlow 0.9s ease-in infinite, vibration 0.75s;
   box-shadow: rgb(85 151 129) 1px 13px 18px -7px;
 }
 
 .lienProjet.active{
-  animation: highlow 0.9s ease-in infinite, vibration 0.8s;
+  animation: highlow 0.9s ease-in infinite, vibration 0.75s;
   box-shadow: rgb(85 151 129) 1px 13px 18px -7px;
 }
 
@@ -401,6 +451,35 @@ nav img{
 .mid .text_l{
   font-size: 4vh;
   font-weight: bold;
+}
+
+
+
+/************************Télécharger CV**********************/
+.telecharger{
+  padding: 30px 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: highlow 0.9s ease-in infinite;
+}
+
+.telecharger a:hover span{
+  animation: spin3 7s;
+}
+.telecharger a{
+  width: 100%;
+  height: 100%;
+  padding: 3% 40px;
+  border-radius: 30px;
+  background-color: rgb(0, 255, 170);
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  color: #fff;
+  font-weight: bold;
+  align-items: center;
+  font-family: cursive;  
 }
 
 
